k8s/webui/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linera-meme-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linera-meme-webui
  template:
    metadata:
      labels:
        app: linera-meme-webui
    spec:
      containers:
        - name: linera-meme-webui
          image: npool/linera-meme-webui:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: linera-meme-webui
  namespace: kube-system
spec:
  ports:
    - name: webui
      port: 80
      targetPort: 80
  selector:
    app: linera-meme-webui
