k8s/webui/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linera-meme-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: linera-meme-webui
    k8s.kuboard.cn/workload: linera-meme-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.testnet-conway.linerameme.fun'
        - testnet-conway.linerameme.fun
      secretName: testnet-conway-linerameme-fun-tls
  rules:
    - host: www.testnet-conway.linerameme.fun
      http: &http_rules
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linera-meme-webui
                port:
                  number: 80
    - host: testnet-conway.linerameme.fun
      http: *http_rules
